log
Fri 09 Sep 2022 05:03:54 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
   70 | }
      | ^
Compilation failed
70b7550
Fri 09 Sep 2022 05:04:07 PM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
   70 | }
      | ^
Compilation failed
664269d
Fri 09 Sep 2022 05:04:15 PM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
   70 | }
      | ^
Compilation failed
e193f8b
Fri 09 Sep 2022 05:13:57 PM UTC: 
 hashmap.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:23: error: statement with no effect [-Werror=unused-value]
   48 |       map->buckets[i] == newPair;
      |       ~~~~~~~~~~~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9317a6
